// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cache Tests | cacheProject - excludePatterns = [src2] 1`] = `
"Snapshot Diff:
- No Config
+ With Config

@@ --- --- @@
-     \\"src2/file1.js\\": Object {
-       \\"named\\": Array [
-         \\"src2_file1_1\\",
-       ],
-       \\"types\\": Array [],
@@ --- --- @@
-   },
@@ --- --- @@
-         \\"module2_src2_1\\","
`;

exports[`Cache Tests | cacheProject - includePaths = [src2] 1`] = `
Object {
  "exp": Object {
    "src2/file1.js": Object {
      "named": Array [
        "src2_file1_1",
      ],
      "types": Array [],
    },
  },
  "imp": Object {
    "module2": Object {
      "isExtraImport": true,
      "named": Array [
        "module2_src2_1",
      ],
      "types": Array [],
    },
  },
  "nodeModules": Object {
    "chalk": Object {
      "default": "chalk",
      "isExtraImport": true,
      "named": Array [],
      "types": Array [],
    },
  },
}
`;

exports[`Cache Tests | cacheProject 1`] = `
Object {
  "exp": Object {
    "src1/file1.js": Object {
      "named": Array [
        "src1_file1_1",
        "src1_file1_2",
        "src1_file1_3",
        "src1_file1_4",
        "src1_file1_5",
        "src1_file1_other1",
        "src1_file1_other2",
        "src1_file1_t_1",
        "src1_file1_t_2",
      ],
      "types": Array [],
    },
    "src1/file2.js": Object {
      "named": Array [
        "src1_file2_1",
        "src1_file2_2",
        "src1_file2_3",
        "src1_file2_4",
        "src1_file2_5",
        "src1_file2_t_1",
        "src1_file2_t_2",
      ],
      "types": Array [],
    },
    "src1/file3.js": Object {
      "default": "file3",
      "named": Array [],
      "types": Array [],
    },
    "src1/subdir/file1.js": Object {
      "named": Array [
        "src1_subdir_file1_1",
      ],
      "types": Array [],
    },
    "src2/file1.js": Object {
      "named": Array [
        "src2_file1_1",
      ],
      "types": Array [],
    },
  },
  "imp": Object {
    "module1": Object {
      "default": "defaultModule1",
      "isExtraImport": true,
      "named": Array [],
      "types": Array [],
    },
    "module1_file2": Object {
      "default": "defaultModule_file2",
      "isExtraImport": true,
      "named": Array [],
      "types": Array [],
    },
    "module2": Object {
      "isExtraImport": true,
      "named": Array [
        "module2_1",
        "module2_2",
        "module2_3",
        "module2_src2_1",
      ],
      "types": Array [
        "module2_t_1",
      ],
    },
  },
  "nodeModules": Object {
    "chalk": Object {
      "default": "chalk",
      "isExtraImport": true,
      "named": Array [],
      "types": Array [],
    },
  },
}
`;

exports[`Cache Tests | import - nonModulePaths 1`] = `
Object {
  "exp": Object {
    "src1/file1.js": Object {
      "named": Array [
        "src1_file1_1",
        "src1_file1_2",
        "src1_file1_3",
        "src1_file1_4",
        "src1_file1_5",
        "src1_file1_other1",
        "src1_file1_other2",
        "src1_file1_t_1",
        "src1_file1_t_2",
      ],
      "types": Array [],
    },
    "src1/file2.js": Object {
      "named": Array [
        "src1_file2_1",
        "src1_file2_2",
        "src1_file2_3",
        "src1_file2_4",
        "src1_file2_5",
        "src1_file2_t_1",
        "src1_file2_t_2",
      ],
      "types": Array [],
    },
    "src1/file3.js": Object {
      "default": "file3",
      "named": Array [],
      "types": Array [],
    },
    "src1/subdir/file1.js": Object {
      "named": Array [
        "src1_subdir_file1_1",
      ],
      "types": Array [],
    },
    "src2/file1.js": Object {
      "named": Array [
        "src2_file1_1",
      ],
      "types": Array [],
    },
  },
  "imp": Object {
    "module1_file2": Object {
      "default": "defaultModule_file2",
      "isExtraImport": true,
      "named": Array [],
      "types": Array [],
    },
  },
  "nodeModules": Object {
    "chalk": Object {
      "default": "chalk",
      "isExtraImport": true,
      "named": Array [],
      "types": Array [],
    },
  },
}
`;
